[package]
authors = ["Jingcheng Yang <yjcyxky@163.com>"]
edition = "2021"
name = "biopoem"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
name = "biopoem"
path = "./bin/biopoem.rs"
test = false

[lib]
name = "biopoem_api"
path = "src/lib.rs"

[dependencies]
exitcode = "1.1.2"
factotum = {path = "../factotum", version = ">=0.6.0"}
lazy_static = "1.4.0"
log = "0.4.11"
log4rs = "0.13.0"
poem = {version = "1.2.27"}
poem-openapi = {version = "1.2", features = ["swagger-ui"]}
regex = "1.3.9"
reqwest = "0.11.9"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.57"
structopt = "0.3.17"
tokio = {version = "1.17.0", features = ["rt-multi-thread", "macros"]}
tracing-subscriber = "0.3.9"

[profile.release]
debug = false
opt-level = 3
